--- a/elm-compiler.cabal
+++ b/elm-compiler.cabal
@@ -53,9 +53,7 @@ Library
         Elm.Compiler.Type,
         Elm.Docs,
         Elm.Package,
-        Elm.Utils
-
-    other-modules:
+        Elm.Utils,
         AST.Declaration,
         AST.Effects,
         AST.Expression.Canonical,
@@ -136,6 +134,8 @@ Library
         Type.Type,
         Type.Unify,
         Validate,
+
+    other-modules:
         Paths_elm_compiler
 
     Build-depends:
